# lightning

./: .dockerignore  .env.azure  .env.local  .flake8  .gitignore  .gitmodules  AGENTS.md  AUTH_SYSTEM_GUIDE.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.api  Dockerfile.contexthub  Dockerfile.worker  EMAIL_CALENDAR_INTEGRATION_GUIDE.md  EMAIL_CALENDAR_SYSTEM_COMPLETE.md  Pulumi.dev.yaml  README.md  VEXTIR_OS_IMPLEMENTATION.md  VEXTIR_OS_MIGRATION_COMPLETE.md  auth_flow_demo.py  check-gh-actions.py  cleanup_redundant_functions.py  contexthub  contexthub-cli.py  create_admin_user.py  demo_abstraction_concept.py  demo_screenshot.html  deployment_test_guide.py  docker-compose-local.yml  docker-compose-unified.yml  docker-compose.azure.yml  docker-compose.lightning-ui.yml  docker-compose.local.yml  docker-compose.yml  get_url.py  main.py  policy.py  product-spec.md  requirements-worker.txt  (+7 more)
context-hub/: ARCHITECTURE.md  CONTEXT_HUB_API.yaml  Cargo.toml  DESIGN.md  Dockerfile  Dockerfile.contexthub  Dockerfile.custom  Dockerfile.test  README.md  TESTING.md  contexthub-cli.py  docker-compose.test.yml  openapi.yaml  read_snapshot_example.rs  requirements-cli.txt  test.sh  test_index_guides.py  test_loro_history.rs  test_timeline.sh  verify_index_guides.sh
context-hub/.github/workflows/: ci.yml
context-hub/benches/: search_bench.rs  timeline_bench.rs
context-hub/context-hub-core/: Cargo.toml
context-hub/context-hub-core/examples/: compress_service.rs
context-hub/context-hub-core/src/: events.rs  indexer.rs  lib.rs  pointer.rs  search.rs  snapshot.rs
context-hub/context-hub-core/src/auth/: azure_ad_middleware.rs  distributed.rs  mod.rs
context-hub/context-hub-core/src/cluster/: mod.rs
context-hub/context-hub-core/src/filesystem/: fuse.rs  mod.rs  sync.rs
context-hub/context-hub-core/src/services/: compress.rs
context-hub/context-hub-core/src/shard/: mod.rs  tests.rs
context-hub/context-hub-core/src/storage/: mod.rs  (+3 more)
context-hub/context-hub-core/tests/: compress_test.rs  storage_metrics_test.rs
context-hub/desktop-app/: Cargo.toml  README.md
context-hub/desktop-app/src/: App.tsx
context-hub/docs/: aad-authentication-design.md  aad-authentication-implementation.md
context-hub/examples/: filesystem_mount.rs  mount_config.yaml
context-hub/index/: .managed.json  meta.json
context-hub/migrations/: 001_distributed_schema.sql
context-hub/src/: auth.rs  distributed_main.rs  indexer.rs  lib.rs  main.rs  pointer.rs  search.rs  snapshot.rs  vector.rs
context-hub/src/api/: auth_middleware.rs  compress.rs  distributed.rs  legacy.rs  mod.rs  mount.rs  replay_example.rs  timeline_handlers.rs  timeline_websocket.rs
context-hub/tests/: concurrency.rs  integration_test.rs  performance.rs  pointer.rs  realtime.rs  server.rs  simple_timeline_test.rs  snapshot.rs  vector.rs  websocket.rs
context-hub/tests/fixtures/: mod.rs  timeline_test_data.rs
core/: .env.example  .gitignore  CHANGELOG.md  CLI_GUIDE.md  Dockerfile  Dockerfile.processor  Dockerfile.vextir  LICENSE  MIGRATION_GUIDE.md  PLANNER_VEXTIR_INTEGRATION.md  README.md  demo_vextir.py  docker-compose.demo.yml  docker-compose.simple.yml  docker-compose.yml  project-spec.md  pyproject.toml  run_vextir_os.py  vextir  vextir.py
core/examples/: agent_configuration_example.py  air_india_monitoring_plan_complete.json  air_india_monitoring_plan_working.json  basic_usage.py  chat_with_event_processor.py  cli_architecture_example.py  event_driven_cli_demo.py  event_driven_demo.py  event_processor_deployment.py  fixed_event_demo.py  local_vs_cloud_example.py  mcp_example.py  run_event_processor_locally.py  sample_plan.json  simple_chat_example.py  working_event_demo.py
core/lightning_core/: __init__.py  cli.py  runtime.py  service_launcher.py
core/lightning_core/abstractions/: __init__.py  configuration.py  container_runtime.py  event_bus.py  factory.py  health.py  llm.py  resilient_factory.py  serverless.py  storage.py
core/lightning_core/agents/: __init__.py  cli.py  config_manager.py  configurable_chat_driver.py  schemas.py  validation.py
core/lightning_core/api/: __init__.py  chat_persistence.py  completions.py  context_router.py  main.py  realtime.py
core/lightning_core/cli/: keys.py
core/lightning_core/events/: __init__.py  models.py  registry.py  types.py
core/lightning_core/llm/: __init__.py  api.py
core/lightning_core/mcp/: __init__.py  adapter.py  cli.py  client.py  config.py  proxy.py  registry.py  sandbox.py
core/lightning_core/planner/: __init__.py  cli.py  pipeline.py  planner.py  registry.py  registry.tools.json  schema.py  storage.py  validator.py
core/lightning_core/providers/: __init__.py
core/lightning_core/security/: key_manager.py
core/lightning_core/tools/: __init__.py  cli.py  models.py  planner_bridge.py  registry.py  simple_registry.py  vextir_bridge.py
core/lightning_core/vextir_os/: __init__.py  channels.py  cli.py  communication_drivers.py  conversation_manager.py  core_drivers.py  driver_initialization.py  drivers.py  enhanced_agent_driver.py  enhanced_cli.py  event_bus.py  event_driven_cli.py  event_monitoring.py  events.py  example_drivers.py  instruction_processor.py  local_event_processor.py  orchestration_drivers.py  ordered_cli.py  plan_execution_drivers.py  registries.py  scheduler_drivers.py  security.py  serverless_processor.py  setup.py  universal_processor.py
core/lightning_planner/: __init__.py  pipeline.py  planner.py  registry.py  schema.py  validator.py
core/planner/: registry.tools.json  storage.py
core/tests/: __init__.py  test_circuit_breaker_simple.py  test_event_deduplication.py  test_event_drainage.py  test_event_drainage_simple.py  test_health_circuit_breaker.py  test_mcp_integration.py  test_model_registry.py
core/tests/integration/: README.md  test_cli_chat.py  test_cron_integration.py
core/tests/planner/: __init__.py  test_cli.py  test_plan_validation.py  test_planner_integration.py  test_schema.py
core/tests/vextir_os/: __init__.py  test_event_bus.py  test_events.py
core/vextir_os/: example_drivers.py  orchestration_drivers.py
(+451 files in other folders)
