[package]
name = "context-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
automerge = "1.0.0-alpha.4"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
git2 = "0.18"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tantivy = { version = "0.19", default-features = false, features = ["lz4-compression", "mmap"] }

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.11", features = ["json"] }
tower = "0.5"
