[package]
name = "context-hub"
version = "0.1.0"
edition = "2021"

[features]
default = []
distributed = ["context-hub-core/distributed"]
legacy = []

[dependencies]
context-hub-core = { path = "./context-hub-core" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
bytes = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-gzip", "cors", "trace"] }
aws-config = "1.0"
aws-sdk-s3 = "1.5"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
git2 = "0.18"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tempfile = "3"
reqwest = { version = "0.11", features = ["json", "stream"] }
tower = "0.5"
futures-util = "0.3"
bytes = "1"
criterion = "0.5"
tokio-tungstenite = "0.26"

[[bench]]
name = "search_bench"
harness = false

[[bench]]
name = "timeline_bench"
harness = false
