[package]
name = "context-hub-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
loro = "1"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
git2 = "0.18"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tantivy = { version = "0.19", default-features = false, features = ["lz4-compression", "mmap"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
jsonwebtoken = "9"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
